@@ -1078,6 +1078,8 @@
 	* Several important compilation error fixes in lpc313x and (dualspeed) USB
 	  code also contributed by David Hewson.
 	* arch/arm/src/sam3u/sam3u_dmac.c - DMA support for the AT90SAM3U.
-	  (incomplete on initial checkin).
+	  (untested on initial checkin).
 	* arch/arm/src/sam3u/sam3u_hsmci.c - SD memory card support for AT90SAM3U
 	  (incomplete on initial checkin).
+	* drivers/usbdev - Several important fixes to the USB mass storage driver
+	  submitted by David Hewson.
